--- a/WebEngageSampleApp/Info.plist
+++ b/WebEngageSampleApp/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -23,11 +28,19 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
+	<key>WEGAlternateAppSupport</key>
+	<true/>
+	<key>WEGEnableLocationAuthorizationRequest</key>
+	<string>IN_USE</string>
 	<key>WEGEnvironment</key>
 	<string>DEFAULT</string>
 	<key>WEGLicenseCode</key>
-	<string></string>
+	<string>LICENSE_CODE</string>
+	<key>WEGLogLevel</key>
+	<string>VERBOSE</string>
 </dict>
 </plist>
