--- a/WebEngageSampleApp/Info.plist
+++ b/WebEngageSampleApp/Info.plist
@@ -39,7 +39,7 @@
 	<key>WEGEnvironment</key>
 	<string>DEFAULT</string>
 	<key>WEGLicenseCode</key>
-	<string>LICENSE_CODE</string>
+	<string>LICENSE CODE</string>
 	<key>WEGLogLevel</key>
 	<string>VERBOSE</string>
 </dict>
